# the_aviator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  action_game.py  airport_service.py  config.py  db_manager.py  game_logic.py  main.py  player_service.py  pyproject.toml  readme.md  requirements.txt  sprites.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md
.planning/quick/1-update-plan-with-db-files-finnish-open-a/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-fix-failing-tests-game-table-missing-har/: 2-PLAN.md  2-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
db/: populatedb.py
scripts/: init_db.py
tests/: conftest.py  test_action_game.py  test_airport_service.py  test_architecture.py  test_db_manager.py  test_game_logic.py  test_migrations.py  test_player_service.py  test_security.py
